# fastapi_tutorials

./: books.db  pyproject.toml  test.py
app/: main.py  test1.py
app/Dependencies/: books.py
app/core/: config.py
app/db/: session.py
app/models/: books.py
app/routers/: books_routes.py
app/schemas/: books.py
